--- a/list-2-1.html
+++ b/list-2-1.html
@@ -518,7 +518,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2020-04-18 通过网页 
 	  <span class="ico">顶</span>	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(6926983) <a href="/b2/587.html#comments"><i class="iconfont icon-com"></i> 评论(10)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(6953000) <a href="/b2/587.html#comments"><i class="iconfont icon-com"></i> 评论(10)</a> 
 	 
 	</p></div></div> 
 	 
@@ -529,7 +529,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2025-03-18 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(287) <a href="/b2/1091.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(380) <a href="/b2/1091.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -540,7 +540,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2025-01-25 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(621) <a href="/b2/1050.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(685) <a href="/b2/1050.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -554,7 +554,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-12-12 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(737) <a href="/b2/994.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(793) <a href="/b2/994.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -570,7 +570,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-11-25 通过手机 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(632) <a href="/b2/991.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(704) <a href="/b2/991.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -581,7 +581,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-09-05 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(916) <a href="/b2/961.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(982) <a href="/b2/961.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -592,7 +592,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(836) <a href="/b2/951.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(893) <a href="/b2/951.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -603,7 +603,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1127) <a href="/b2/950.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(1191) <a href="/b2/950.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -614,7 +614,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-28 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(825) <a href="/b2/949.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(892) <a href="/b2/949.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	 
@@ -625,7 +625,7 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	  <div class="meta">
 	  <p class="time">2024-08-17 通过网页 
 	  	  	  	  </p>
-      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4016) <a href="/b2/943.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
+      <p class="navPost"><i class="iconfont icon-view"></i> 浏览(4168) <a href="/b2/943.html#comments"><i class="iconfont icon-com"></i> 评论(0)</a> 
 	 
 	</p></div></div> 
 	<div class="pagination">
@@ -728,11 +728,11 @@ items[0].innerHTML = '<center><strong class="ttst" style="text-align: center;fon
 	       <div class="widget">
         <h3>信用卡</h3>     
 				  <ul><ul class="topic">
-<li>招商全币 免年费√ | 招商金卡 6次√</i>
-<li>平安银行 免年费√ | 招商白金 3次√</i>
-<li>建设银行 免年费√ | 农业银行 5次√</i>
-<li>邮政银行 免年费√ | 工商银行 5次√</i>
-<li>中国银行 免年费√ | 广发银行 12次</i>
+<li>招商全币 免年费 | 招商金卡 6次√</i>
+<li>平安银行 免年费 | 招商白金 3次√</i>
+<li>建设银行 免年费 | 农业银行 5次√</i>
+<li>邮政银行 免年费 | 工商银行 5次√</i>
+<li>中国银行 免年费 | 广发银行 1次√</i>
 </ul></ul>
 		      </div>	  
 	       <div class="widget">
